# rust-high-performance-backtester

./: Cargo.toml  README.md
docs/: architecture.mmd
examples/: simple_strategy.rs
src/: lib.rs  main.rs  types.rs
src/engine/: mod.rs
src/execution/: mod.rs
src/optimization/: mod.rs
src/strategy/: mod.rs
