[package]
name = "high-performance-backtester"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "High-performance backtesting framework for trading strategies"
license = "MIT"
repository = "https://github.com/galafis/rust-high-performance-backtester"
keywords = ["trading", "backtesting", "quant", "strategy", "finance"]
categories = ["finance", "algorithms", "simulation"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
csv = "1.3"

[[bin]]
name = "backtester"
path = "src/main.rs"
